# MMS-texturing

./: CMakeLists.txt  README.md
apps/texrecon/: arguments.h  texrecon.cpp
elibs/: CMakeLists.txt
libs/tex/: CMakeLists.txt  calculate_data_costs.cpp  debug.h  generate_debug_embeddings.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  texture_patch.cpp  texture_view.cpp  texture_view.h  texture_view_libori.cpp  texture_view_libori.h  texture_view_mvs.cpp  texture_view_mvs.h  texturing.h  view_selection.cpp
